--- a/src/main/resources/MyApp/pages/address/CreateAddress.properties
+++ b/src/main/resources/MyApp/pages/address/CreateAddress.properties
@@ -6,6 +6,6 @@ phone-label=Phone Number
 MR=Mr.
 MRS=Mrs.
 DR=Dr.
-submit-label = Create Address
+submit-label = Create New Pizza
 zip-regexp=^\\d{6}(-\\d{4})?$
 zip-regexp-message=Zip Codes are five or nine digits.  Example: 02134 or 90125-1655.
