--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -1,2 +1,12 @@
 submit-label = ok
-phone-regexp=^\\d{6}(\\d{5})?$
+phone-regexp=^\\d{6}(\\d{3})?$
+
+
+name-label=Name
+street-label=Street
+house-label=House
+apartment-label=Apertment
+phone-label=Phone Number
+
+phone-regexp=^\\d{6}(-\\d{4})?$
+phone-regexp-message= Phone are six or eleven .  Example: 700000 or 89001234567.
