--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -1,12 +1,9 @@
 submit-label = ok
-phone-regexp=^\\d{6}(\\d{3})?$
-
-
-name-label=Name
-street-label=Street
-house-label=House
-apartment-label=Apertment
-phone-label=Phone Number
-
-phone-regexp=^\\d{6}(-\\d{4})?$
-phone-regexp-message= Phone are six or eleven .  Example: 700000 or 89001234567.
+phone-regexp=^\\d{6}(\\d{5})?$
+name-label=Имя
+street-label=Улица
+house-label=Дом
+apartment-label=Квартира
+phone-label=Номер телфона
+phone-regexp-message= Телефон должен состоять из 6 или 11 цифр. Пример: 700000 or 89001234567.
+confirm= Are you sure?
