--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -1,6 +1,6 @@
 submit-label = ok
 phone-regexp=^\\d{6}(\\d{5})?$
-name-label=Имя
+aname-label=Имя
 street-label=Улица
 house-label=Дом
 apartment-label=Квартира
