--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -6,4 +6,4 @@ house-label=Дом
 apartment-label=Квартира
 phone-label=Номер телфона
 phone-regexp-message= Телефон должен состоять из 6 или 11 цифр. Пример: 700000 or 89001234567.
-confirm= Are you sure?
+confirm= Ваша заявка принята
