--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -1,9 +1,9 @@
 submit-label = ok
 phone-regexp=^\\d{6}(\\d{5})?$
 aname-label=Имя
-street-label=Улица
-house-label=Дом
-apartment-label=Квартира
-phone-label=Номер телфона
+street-label=Street
+house-label=Hose
+apartment-label=Apartment
+phone-label=Phone
 phone-regexp-message= Телефон должен состоять из 6 или 11 цифр. Пример: 700000 or 89001234567.
 confirm= Ваша заявка принята
