--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -1,4 +1,4 @@
-submit-label = ok
+submit-label = Вы уверены?
 phone-regexp=^\\d{6}(\\d{5})?$
 aname-label=Имя
 street-label=Street
@@ -6,4 +6,4 @@ house-label=Hose
 apartment-label=Apartment
 phone-label=Phone
 phone-regexp-message= Телефон должен состоять из 6 или 11 цифр. Пример: 700000 or 89001234567.
-confirm= Ваша заявка принята
+confirm= Вы уверены, что правильно заполнили заявку?
