--- a/src/main/resources/MyApp/pages/Bid.properties
+++ b/src/main/resources/MyApp/pages/Bid.properties
@@ -2,7 +2,7 @@ submit-label = Вы уверены?
 phone-regexp=^\\d{6}(\\d{5})?$
 aname-label=Имя
 street-label=Street
-house-label=Hose
+house-label=House
 apartment-label=Apartment
 phone-label=Phone
 phone-regexp-message= Телефон должен состоять из 6 или 11 цифр. Пример: 700000 or 89001234567.
