--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,18 @@
             <version>${tapestry-release-version}</version>
         </dependency>
 
+            <dependency>
+                <groupId>org.apache.tapestry</groupId>
+                <artifactId>tapestry-upload</artifactId>
+                <version>${tapestry-release-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.11-beta2</version>
+            </dependency>
+
         <!-- This adds automatic compression of JavaScript and CSS when in production mode. -->
         <dependency>
             <groupId>org.apache.tapestry</groupId>
