--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
                 <version>3.11-beta2</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.11-beta2</version>
+            </dependency>
+
         <!-- This adds automatic compression of JavaScript and CSS when in production mode. -->
         <dependency>
             <groupId>org.apache.tapestry</groupId>
